kubernetes-gitlab/ing.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ing-gitlab
  namespace: gitlab
  annotations:
   traefik.ingress.kubernetes.io/router.entrypoints: web,

spec:
  rules:
  - host: gitlab.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitlab
            port:
                number: 80
